now i learned how to use babel

--- a/task20.1/package.json
+++ b/task20.1/package.json
@@ -1,6 +1,10 @@
 {
   "dependencies": {
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.5",
+    "@babel/preset-env": "^7.28.5",
     "bootstrap": "^5.3.8",
     "moment": "^2.30.1"
   }
+ 
 }
