minified js file

--- a/task18.1/package.json
+++ b/task18.1/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "build": " babel js/ -d dist/ --minified"
+  },
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.5",
